@@ -6,6 +6,7 @@ dpkg (1.16.15+nmu1) UNRELEASED; urgency=low
     packages.
   * Do not leak color string on «dselect --color».
   * Fix memory leaks when parsing alternatives.
+  * Fix memory leaks in buffer_copy() on error conditions.
 
   [ Updated scripts translations ]
   * Fix typos in German (Helge Kreutzmann)
